# eXeL-AI-Polling

./: .env.example  .gitignore  CLAUDE.md  CLOUDFLARE_ACCESS_FIX.md  Cube_Flow_Table.md  Cube_Mapping_From_v04.2.md  Makefile  README.md  Requirements.txt  SSSES.md  Token_Governance_Math.md  Updated_Web_Results_With_Themes_And_Summaries_v03 (1).csv  Updated_Web_Results_With_Themes_And_Summaries_v03.csv  docker-compose.yml  eXeL-AI_DesignMatrix.xlsx  eXeL-AI_Polling_DesignMatrix.xlsx  eXeL-AI_Polling_v04.2.py  eXeL_AI_Branding.txt  test-km.json
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/core/: auth.py  circuit_breaker.py  concurrency.py  crypto_utils.py  dependencies.py  determinism.py  exceptions.py  hi_rates.py  logging.py  middleware.py  permissions.py  phase_a_retry.py  presence.py  rate_limit.py  realtime_ws.py  redis_presence.py  sdk.py  sdk_functions.py  security.py  submission_validators.py  supabase_broadcast.py  text_pipeline.py  theme_compression.py  universal.py
backend/scripts/: check_feature_removal.py  cost_estimate_test.py  setup_dev.sh
backend/tests/: conftest.py  test_12user_simulation.py  test_1m_all_cubes.py  test_1m_simulation.py  test_broadcast_payload.py  test_cross_cube_chain.py  test_fixtures_1mod_7users.py  test_health.py  test_n99_ssses_spiral.py  test_sdk_core.py  test_sdk_functions.py  test_supabase_cube11_12.py  test_supabase_integration.py  test_theme_compression.py  test_theming_36responses.py  test_wireguard_whitelist.py  test_wireguard_whitelist_cubes123.py
(+1891 files in other folders)
