[project]
name = "soi-polling-backend"
version = "0.1.0"
description = "SoI Polling Tool - FastAPI Backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Lazy imports: don't load torch/sklearn at startup — defer to first use
# This reduces pytest startup from ~7s to ~3s per invocation
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore::RuntimeWarning:_pytest.unraisableexception",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
